--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: none;
 }
 
 .App-logo {
@@ -21,4 +21,10 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@media only screen and (min-width: 480px) {
+  .App {
+    text-align: center;
+  }
 }
