--- a/client/src/components/nav/Nav.css
+++ b/client/src/components/nav/Nav.css
@@ -36,6 +36,7 @@
 
 .sidebar_link {
   cursor: pointer;
+  margin-left: 25px;
   margin-top: 25px;
   text-decoration: none;
   color: #000;
@@ -44,4 +45,10 @@
 .sidebar_link a {
   text-decoration: none;
   color: #000;
+}
+
+@media only screen and (min-width: 480px) {
+  .nav_container {
+    text-align: center;
+  }
 }
