--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,7 @@
-body, html {
+body,#map{
+  position: absolute;
+  top: 0;
+  left:0;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -26,8 +29,38 @@ body {
 }
 
 
-#map {
-  position: relative;
+.btn_stretchologist {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 100;
+  cursor: pointer;
+  font-size: 1.2em;
   width: 100%;
-  height: 450px;
+  max-width: 300px;
+  margin: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 30px;
+  padding-left: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #fff;
+}
+
+.btn_stretchologist a {
+  padding: 7px;
+  margin-right: 50px;
+}
+
+.btn_stretchologist a:hover{
+  background-color: #90CAF9;
+  border-radius: 5px;
+}
+
+.btn_stretchologist_list {
+  z-index: 100;
+  position: absolute;
+  bottom: 60px;
+  right: 10px;;
 }
