--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-body,#map{
+body,#map, .leaflet_map{
   position: absolute;
   top: 0;
   left:0;
@@ -26,41 +26,4 @@ body {
   -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.4);
   -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.4);
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.4);
-}
-
-
-.btn_stretchologist {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 100;
-  cursor: pointer;
-  font-size: 1.2em;
-  width: 100%;
-  max-width: 300px;
-  margin: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-right: 30px;
-  padding-left: 10px;
-  border-radius: 5px;
-  border: none;
-  background-color: #fff;
-}
-
-.btn_stretchologist a {
-  padding: 7px;
-  margin-right: 50px;
-}
-
-.btn_stretchologist a:hover{
-  background-color: #90CAF9;
-  border-radius: 5px;
-}
-
-.btn_stretchologist_list {
-  z-index: 100;
-  position: absolute;
-  bottom: 60px;
-  right: 10px;;
 }
