--- a/client/src/components/home/map/Map.css
+++ b/client/src/components/home/map/Map.css
@@ -1,5 +1,12 @@
-.leaflet_map {
-  z-index: 100;
+#map {
+  position: absolute;
+  top: 0;
+  left:0;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 .btn_stretchologist {
@@ -34,19 +41,6 @@
   bottom: 60px;
   right: 10px;;
 }
-
-.contractor_list_container {
-  margin-left: 15px;
-}
-
-.contractor_list {
-  flex-direction: column;
-}
-
-.contractor_list_item {
-  padding: 10px 0;
-}
-
 
 @media only screen and (max-width: 480px) {
   .btn_stretchologist {
