--- a/client/src/components/home/searchbox/SearchBox.css
+++ b/client/src/components/home/searchbox/SearchBox.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   z-index: 100;
-  margin-top: 80px;
+  margin-top: 100px;
   width: 100%;
 }
 
@@ -13,5 +13,6 @@
   border: none;
   padding: 10px;
   padding-left: 20px;
-  width: 100%;
+  min-width: 270px;
+  max-width: 450px;
 }
