--- a/client/src/components/home/booking/Booking.css
+++ b/client/src/components/home/booking/Booking.css
@@ -3,8 +3,8 @@
   position: absolute;
   background-color: #fff;
   z-index: 100;
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
   align-items: center;
   right:5%;
   bottom: 5%;
@@ -18,4 +18,21 @@
   -webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5);
   box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5);
+}
+
+
+.new_form_container {
+  position: absolute;
+  background-color: #fff;
+  z-index: 100;
+  right: 5%;
+  bottom: 5%;
+  align-items: center;
+}
+
+.booking_form {
+  min-width: 270px;
+  max-width: 450px;
+  height: 100px;
+  padding: 15px;
 }
