--- a/client/src/components/home/booking/Booking.css
+++ b/client/src/components/home/booking/Booking.css
@@ -30,6 +30,34 @@
   align-items: center;
 }
 
+.booking_pending_container {
+  background-color: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  z-index: 200;
+  top: 0;
+  left:0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.booking_pending_img {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 50px;
+}
+
+.booking_pending_btn {
+  background-color: rgba(129, 204, 255, 1);
+  cursor: pointer;
+  padding: 15px;
+  font-size: 1em;
+}
+
 .booking_form {
   min-width: 270px;
   max-width: 450px;
