--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@ body {
   background-color: rgba(240, 240, 240, 1);
 }
 
+img {
+  width: 100%
+}
+
 .flex_me {
   display: -webkit-box;
   display: -moz-box;
