--- a/client/src/components/home/booking/Booking.css
+++ b/client/src/components/home/booking/Booking.css
@@ -59,8 +59,41 @@
 }
 
 .booking_form {
+  flex-direction: column;
   min-width: 270px;
   max-width: 450px;
-  height: 100px;
+  height: 120px;
   padding: 15px;
+
+}
+
+.booking_form_field {
+  justify-content: flex-start !important;
+  align-items: center;
+  padding-left: 5px;
+}
+
+.booking_form_field_img {
+  background-color: #000;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+
+}
+
+.booking_form_buttons {
+  justify-content: space-around !important;
+}
+
+.review {
+  background-color: rgba(129, 204, 255, 1);
+}
+
+.booking_form_button {
+  font-size: 1.2em;
+  cursor: pointer;
+  border: none;
+  background-color: #;
+  width: 100%;
+  height: 50px;
 }
