--- a/client/src/components/home/map/Map.css
+++ b/client/src/components/home/map/Map.css
@@ -42,6 +42,26 @@
   right: 10px;;
 }
 
+.searchbox_container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  margin-top: 100px;
+  width: 100%;
+}
+
+.searchbox_input {
+  font-weight: 100;
+  font-size: 1em;
+  border: none;
+  padding: 10px;
+  padding-left: 20px;
+  min-width: 270px;
+  max-width: 450px;
+}
+
+
 @media only screen and (max-width: 480px) {
   .btn_stretchologist {
     right: 7%;
