--- a/client/src/components/home/booking/Booking.css
+++ b/client/src/components/home/booking/Booking.css
@@ -62,7 +62,7 @@
   flex-direction: column;
   min-width: 270px;
   max-width: 450px;
-  height: 120px;
+  height: 150px;
   padding: 15px;
 
 }
@@ -83,6 +83,7 @@
 
 .booking_form_buttons {
   justify-content: space-around !important;
+  margin: 5px;
 }
 
 .review {
